# experts_etl

./: .gitignore  Pipfile  README.md  delete_pub.py  env.dist  load_linked_records.py  pyproject.toml  runner.py  setup.py
docs/: award.xsd  commons.xsd  data-flow.md  notes-fransen-video-2022-04-27.md  organisation-advanced-examples.xml  organisation-simple-examples.xml  person-advanced-examples.xml  person-simple-examples.xml  person.xsd  primary_job_cases.md  upmproject.xsd  user-advanced-examples.xml  user-simple-examples.xml  user.xsd
experts_etl/: affiliate_job.py  changes_buffer_managers.py  demographics.py  employee_job.py  exceptions.py  iso_datestr_parser.py  loggers.py  organisation.py  person.py  pure_api_external_org.py  pure_api_external_person.py  pure_api_internal_org.py  pure_api_internal_person.py  pure_api_pub.py  sync_file_rotator.py  transformers.py  umn_data_error.py
experts_etl/edw_to_pure/: award.py  person.py  project.py  user.py
experts_etl/extractor_loaders/: pure_api_changes.py  pure_api_external_organisations.py  pure_api_external_persons.py  pure_api_organisational_units.py  pure_api_persons.py  pure_api_research_outputs.py
experts_etl/oit_to_edw/: affiliate_job.py  award_project.py  employee_job.py  graduate_program.py  person.py  poi_job.py
experts_etl/pure_to_edw/: changes.py  collection.py
experts_etl/templates/: award.xml.j2  organisation.xml.j2  person.xml.j2  project.xml.j2  user.xml.j2
experts_etl/transformer_loaders/: pure_api_external_org.py  pure_api_external_person.py  pure_api_internal_org.py  pure_api_internal_person.py  pure_api_pub.py
tests/: __init__.py  emp_job_entries_1082441.py  emp_job_entries_3262322.py  emp_job_entries_4604830.py  emp_job_entries_5150075.py  employee_jobs_0903070.py  employee_jobs_1217312.py  employee_jobs_1717940.py  employee_jobs_1732812.py  employee_jobs_2110507.py  employee_jobs_8000397.py  fake123_employee_jobs.py  fake312_employee_jobs.py  fake321_emp_job_entries.py  fake322_emp_job_entries.py  fake357_aff_job_entries.py  fake531_aff_job_entries.py  fake531_aff_job_entries_2.py  fake531_aff_job_entries_3.py  fake567_employee_jobs.py  fake765_emp_job_entries.py  poi_jobs_2898289.py  poi_jobs_2927554.py  poi_jobs_5231388.py  poi_jobs_5491169.py  poi_jobs_5575725.py  test_affiliate_job.py  test_employee_job.py  test_person.py  test_poi_job.py  test_pure_api_change.py  test_pure_api_changes.py  test_transformers.py
tests/data/emplid_0903070/: employee_jobs.py
tests/data/emplid_1082441/: employee_jobs.py  person.py
tests/data/emplid_1217312/: employee_jobs.py  person.py
(+25 files in other folders)
