[tool.poetry]
name = "experts_etl"
version = "5.19.6"
description = "Moves data from UMN to Pure (Experts@Minnesota), and vice versa."
readme = "README.md"
authors = ["David Naughton <naughton@umn.edu>", "Michael Berkowski <mjb@umn.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
dotenv_switch = {url = "https://github.com/UMNLibraries/dotenv_switch/raw/master/dist/dotenv_switch-0.1.2.tar.gz"}
experts_dw = {url = "https://github.com/UMNLibraries/experts_dw/raw/main/dist/experts_dw-7.25.5.tar.gz"}
jinja2 = "^3.0.1"
pandas = ">=1.3"
pureapi = {url = "https://github.com/UMNLibraries/pureapi/raw/main/dist/pureapi-4.5.2.tar.gz"}
python-daemon = "^2.3.0"
python-dateutil = "^2.8.2"
python-json-logger = "^2.0.2"
schedule = "^1.1.0"
urllib3 = "^1.26"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
