[tool.poetry]
name = "experts_etl"
version = "6.1.0"
description = "Moves data from UMN to Pure (Experts@Minnesota), and vice versa."
readme = "README.md"
authors = ["David Naughton <naughton@umn.edu>", "Michael Berkowski <mjb@umn.edu>", "John Barneson <barne102@umn.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
dotenv_switch = {url = "https://github.com/UMNLibraries/dotenv_switch/raw/master/dist/dotenv_switch-0.1.2.tar.gz"}
experts_dw = {url = "https://github.com/UMNLibraries/experts_dw/raw/main/dist/experts_dw-8.0.0.tar.gz"}
jinja2 = "^3.0.1"
pandas = ">=1.3"
pureapi = {url = "https://github.com/UMNLibraries/pureapi/raw/main/dist/pureapi-4.6.1.tar.gz"}
python-daemon = "^2.3.0"
python-json-logger = "^2.0.2"
schedule = "^1.1.0"
urllib3 = "^1.26"
pytest-unordered = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
